Fix alignment issues with the footer

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -667,46 +667,39 @@ section {
   margin-top: 30px;
   padding: 10px;
   background-color: #2c3e50;
-  color: #fff;
-  display: flex;
-  flex-direction: column-reverse; }
+  color: #fff; }
   @media (min-width: 1024px) {
     .main-footer {
+      display: flex;
       flex-direction: row-reverse;
       padding: 10px 20px; } }
 
 .main-footer section {
-  border-top: 1px solid #bbb;
+  border-bottom: 1px solid #bbb;
   position: relative; }
   @media (min-width: 1024px) {
     .main-footer section {
       width: 32%;
-      border-top: none;
+      border-bottom: none;
       border-left: 1px solid #bbb;
       margin-left: 10px;
       padding-left: 10px; } }
 
 .main-footer section:last-child {
-  border-top: none; }
+  border-bottom: none; }
   @media (min-width: 1024px) {
     .main-footer section:last-child {
       border-left: none; } }
 
-.main-footer section:last-child h3 {
-  text-align: center; }
-
 .main-footer section h3 {
   text-align: left;
   font-size: 1em; }
-  @media (min-width: 768px) {
-    .main-footer section h3 {
-      text-align: center; } }
 
 .main-footer section img {
   height: 30px;
   position: absolute;
   right: 0;
-  top: 13px;
+  top: -7px;
   opacity: .7;
   cursor: pointer; }
   @media (min-width: 768px) {
@@ -720,16 +713,14 @@ section {
   display: none; }
   @media (min-width: 768px) {
     .main-footer section ul {
-      display: flex !important;
-      justify-content: center; } }
+      display: block !important; } }
 
-@media (min-width: 768px) {
-  .main-footer .links li,
-  .main-footer .social-links li {
-    margin-right: 10px; } }
+.main-footer .social-links a {
+  margin-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px; }
 
 .main-footer section p {
-  text-align: center;
   font-size: .9em; }
 
 .main-footer section a {
